# advent-of-code-2025

./: .gitignore  Cargo.toml  Makefile  README.md  aoc
.devcontainer/: devcontainer.json
day01/: Cargo.toml
day01/src/: main.rs
day02/: Cargo.toml
day02/src/: main.rs
day03/: Cargo.toml
day03/src/: main.rs
day05/: Cargo.toml
day05/src/: main.rs
day06/: Cargo.toml
day06/src/: main.rs
day07/: Cargo.toml
day07/src/: main.rs
day08/: Cargo.toml
day08/src/: main.rs
scaffold/: Cargo.toml
scaffold/src/: main.rs
